[package]
name = "uma-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-stream
async-stream = "0.3.5"
# axum | enabled: form, http1, http2, json, matched-path, original-uri, query, tokio, tower-log | disabled: __private_docs, headers, macros, multipart, tracing, ws
axum = { version = "0.6.18", features = ["default", "http2"] } 
# base64ct | disabled: alloc, std
base64ct = "1.6.0"
# either | enabled: std, serde
either = { version = "1.8.1", features = ["serde"] }
# futures | enabled: alloc, async-await, executor, std | disabled: bilock, cfg-target-has-atomic, compat, futures-executor, io-compat, thread-pool, unstable, write-all-vectored
futures = "0.3.28" 
http = "0.2.9"
no-way = "0.4.1"
#oxiri | enabled: serde
oxiri = { version = "0.2.2", features = ["serde"] }
# reqwest | enabled: __tls, default-tls, hyper-tls, json, native-tls, serde_json, tokio-native-tls, wasm-streams | disabled: __internal_proxy_sys_no_cache, __rustls, async-compression, blocking, brotli, cookie_crate, cookie_store, cookies, deflate, futures-channel, gzip, h3, h3-quinn, http3, hyper-rustls, mime_guess, multipart, native-tls, native-tls-alpn, native-tls-vendored, quinn, rustls, rustls-native-certs, rustls-pemfile, rustls-tls, rustls-tls-manual-roots, rustls-tls-native-roots, rustls-tls-webpki-roots, socks, stream, tokio-rustls, tokio-socks, tokio-util, trust-dns, trust-dns-resolver, webpki-roots
reqwest = { version = "0.11.18", features = ["serde_json", "json", "wasm-streams"] }
# serde | enabled: std | disabled: alloc, derive, rc, serde_derive, unstable
serde = "1.0.163" 
# serde_json | enabled: std | disabled: alloc, arbitrary_precision, float_roundtrip, indexmap, preserve_order, raw_value, unbounded_depth
serde_json = "1.0.96"
# tap
tap = "1.0.1"
# thiserror
thiserror = "1.0.40"
# time | enabled: alloc, std, wasm-bindgen | disabled: formatting, large-dates, local-offset, macros, parsing, quickcheck, rand, serde, serde-human-readable, serde-well-known
time = { version = "0.3.22", features = ["alloc", "std", "wasm-bindgen"]}
# tokio | enabled: bytes, fs, full, io-std, io-util, libc, macros, net, num_cpus, parking_lot, process, rt, rt-multi-thread, signal, signal-hook-registry, socket2, sync, time, tokio-macros, mio | disabled: stats, test-util, tracing, windows-sys
tokio = { version = "1.28.2", features = ["full"] } 
# tower | enabled: log | disabled: __common, balance, buffer, discover, filter, full, futures-core, futures-util, hdrhistogram, hedge, indexmap, limit, load, load-shed, make, pin-project, pin-project-lite, rand, ready-cache, reconnect, retry, slab, spawn-ready, steer, timeout, tokio, tokio-stream, tokio-util, tracing, util
tower = "0.4.13"
# tower-http | enabled: cors, trace, timeout | disabled: add-extension, async-compression, auth, base64, catch-panic, compression-br, compression-deflate, compression-full, compression-gzip, compression-zstd, decompression-br, decompression-deflate, decompression-full, decompression-gzip, decompression-zstd, follow-redirect, fs, full, httpdate, iri-string, limit, map-request-body, map-response-body, metrics, mime, mime_guess, normalize-path, percent-encoding, propagate-header, redirect, request-id, sensitive-headers, set-header, set-status, timeout, tokio, tokio-util, tower, tracing, util, uuid, validate-request
tower-http = { version = "0.4.0", features = ["cors", "trace", "util"] } 
# tracing | enabled: attributes, std, tracing-attributes | disabled: async-await, log, log-always, max_level_debug, max_level_error, max_level_info, max_level_off, max_level_trace, max_level_warn, release_max_level_debug, release_max_level_error, release_max_level_info, release_max_level_off, release_max_level_trace, release_max_level_warn, valuable
tracing = "0.1.37"
# uuid | enabled: atomic, getrandom, rng, std, v7, wasm-bindgen | disabled: arbitrary, fast-rng, js, macro-diagnostics, md-5, md5, rand, serde, sha1, sha1_smol, slog, uuid-macro-internal, v1, v3, v5, v6, v7, v8, zerocopy
uuid = { version = "1.3.4", features = ["std", "v4", "wasm-bindgen"] } 
